packages/typ/tests/fixtures/diagnostics/0023_core_pattern_annotation_mismatch_02.ml.infer.expected
File "0023_core_pattern_annotation_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0023_core_pattern_annotation_mismatch_02 is not a valid module name.

File "0023_core_pattern_annotation_mismatch_02.ml", line 1, characters 35-36:
1 | let ((beta : bool), other_beta) = (1, 2)
                                       ^
Error: The constant 1 has type int but an expression was expected of type
         bool
