packages/typ/tests/fixtures/diagnostics/0023_core_pattern_annotation_mismatch_02.ml
let ((beta : bool), other_beta) = (1, 2)
